crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_uninvolved_Jpa.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "user")
public class User {

    @Id
    @Column(name = "id")
    private Integer id;

    protected User() {
    }
}
