crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_uninvolved_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model User {
  id Int @id
  user_user_friends UserFriends[] @relation("UserFriendsUser")
  friend_user_friends UserFriends[] @relation("UserFriendsFriend")

  @@map("user")
}
