crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@many_to_many_user_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class User(models.Model):
    id = models.UUIDField(primary_key=True)
    articles = models.ManyToManyField("Article", through="ArticleUser", related_name="+")

    class Meta:
        managed = False
        db_table = "user"
